tests/neg/arrays/18-array.ts

/*@ emp :: IArray<number> */
let emp = [];

assert(emp === null);

// assert(false);
